--- a/monolake-services/Cargo.toml
+++ b/monolake-services/Cargo.toml
@@ -39,8 +39,6 @@ hyper = [
 ]
 
 [dependencies]
-monolake-core = { version = "0.3.0", path = "../monolake-core" }
-
 monoio = { workspace = true, features = ['splice'] }
 monoio-codec = { workspace = true }
 monoio-http = { workspace = true, features = ["encoding"] }
@@ -53,26 +51,7 @@ local-sync = { workspace = true }
 service-async = { workspace = true }
 certain-map = { workspace = true }
 
-# tls
-monoio-rustls = { workspace = true, optional = true }
-monoio-native-tls = { workspace = true, optional = true }
-native-tls = { workspace = true, optional = true }
-
-rustls = { version = "0.21", optional = true, default-features = false }
-rustls-pemfile = { version = "1", optional = true }
-webpki-roots = { version = "0.25.2", optional = true }
-
-hyper = { version = "1.1", features = [
-    "http1",
-    "client",
-    "server",
-], optional = true }
-hyper-util = { version = "0.1.3", features = [
-    "http1",
-    "client",
-    "server-auto",
-], optional = true }
-monoio-compat = { version = "0.2.2", features = ["hyper"], optional = true }
+monolake-core = { version = "0.3.0", path = "../monolake-core" }
 
 # common
 bytes = { workspace = true }
@@ -85,6 +64,28 @@ rand = "0.8"
 matchit = "0.8"
 pin-project-lite = "0.2"
 futures = "0.3"
+
+# for tls
+monoio-rustls = { workspace = true, optional = true }
+monoio-native-tls = { workspace = true, optional = true }
+native-tls = { workspace = true, optional = true }
+
+rustls = { version = "0.21", optional = true, default-features = false }
+rustls-pemfile = { version = "1", optional = true }
+webpki-roots = { version = "0.25.2", optional = true }
+
+# for hyper
+hyper = { version = "1.1", features = [
+    "http1",
+    "client",
+    "server",
+], optional = true }
+hyper-util = { version = "0.1.3", features = [
+    "http1",
+    "client",
+    "server-auto",
+], optional = true }
+monoio-compat = { version = "0.2.2", features = ["hyper"], optional = true }
 
 # for openid
 cookie = { version = "0.18", optional = true }
